[gd_scene load_steps=12 format=2]

[ext_resource path="res://tiles/inside.png" type="Texture" id=1]
[ext_resource path="res://tiles/interior.png" type="Texture" id=2]
[ext_resource path="res://Prelabs/Scripts/InteriorHouse.gd" type="Script" id=3]
[ext_resource path="res://sprites/Npc/chara2.png" type="Texture" id=4]
[ext_resource path="res://Prelabs/Scripts/Moko.gd" type="Script" id=5]
[ext_resource path="res://sprites/Npc/speech_bubble_large_spritesheet.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 15.5 )

[sub_resource type="TileSet" id=2]
0/name = "interior.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 480, 416 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=1]
0/name = "inside.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( -32, 0, 384, 352 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="CapsuleShape2D" id=4]
height = 8.0

[sub_resource type="CircleShape2D" id=5]
radius = 17.0

[node name="InteriorHouse" type="Node2D"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.48, 0.48 )

[node name="DoorExit" type="Area2D" parent="."]
position = Vector2( 239, 270 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorExit"]
position = Vector2( 1, 0.5 )
shape = SubResource( 3 )

[node name="InteriorItems" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 65540, 8, 0, 327681, 14, 0, 65538, 65536, 0, 65540, 65550, 0, 65538, 131072, 0, 65540, 131075, 0, 458753, 131076, 0, 458752, 131077, 0, 458752, 131084, 0, 131085, 131086, 0, 65538, 196608, 0, 65540, 196617, 0, 14, 196622, 0, 65538, 262144, 0, 65540, 262146, 0, 262149, 262153, 0, 65550, 262158, 0, 65538, 327680, 0, 65540, 327689, 0, 131086, 327694, 0, 65538, 393216, 0, 65540, 393228, 0, 262146, 393230, 0, 65538, 458752, 0, 65540, 458766, 0, 65538, 524288, 0, 65540, 524295, 0, 65539, 524302, 0, 65538 )

[node name="FloorAndWall" type="TileMap" parent="."]
z_index = -1
z_as_relative = false
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 262149, 1, 0, 8, 2, 0, 8, 3, 0, 8, 4, 0, 8, 5, 0, 8, 6, 0, 8, 7, 0, 8, 8, 0, 8, 9, 0, 8, 10, 0, 8, 11, 0, 8, 12, 0, 8, 13, 0, 8, 65536, 0, 262149, 65537, 0, 262145, 65538, 0, 262145, 65539, 0, 262145, 65540, 0, 262145, 65541, 0, 262145, 65542, 0, 262145, 65543, 0, 262145, 65544, 0, 262145, 65545, 0, 262145, 65546, 0, 262145, 65547, 0, 262145, 65548, 0, 262145, 65549, 0, 262145, 131072, 0, 262149, 131073, 0, 262145, 131074, 0, 262145, 131075, 0, 262145, 131076, 0, 262145, 131077, 0, 262145, 131078, 0, 262145, 131079, 0, 262145, 131080, 0, 262145, 131081, 0, 262145, 131082, 0, 262145, 131083, 0, 262145, 131084, 0, 262145, 131085, 0, 262145, 196608, 0, 262149, 196609, 0, 262145, 196610, 0, 262145, 196611, 0, 262145, 196612, 0, 262145, 196613, 0, 262145, 196614, 0, 262145, 196615, 0, 262145, 196616, 0, 262145, 196617, 0, 262145, 196618, 0, 262145, 196619, 0, 262145, 196620, 0, 262145, 196621, 0, 262145, 262144, 0, 262149, 262145, 0, 262145, 262146, 0, 262145, 262147, 0, 262145, 262148, 0, 262145, 262149, 0, 262145, 262150, 0, 262145, 262151, 0, 262145, 262152, 0, 262145, 262153, 0, 262145, 262154, 0, 262145, 262155, 0, 262145, 262156, 0, 262145, 262157, 0, 262145, 327680, 0, 262149, 327681, 0, 262145, 327682, 0, 262145, 327683, 0, 262145, 327684, 0, 262145, 327685, 0, 262145, 327686, 0, 262145, 327687, 0, 262145, 327688, 0, 262145, 327689, 0, 262145, 327690, 0, 262145, 327691, 0, 262145, 327692, 0, 262145, 327693, 0, 262145, 393216, 0, 262149, 393217, 0, 262145, 393218, 0, 262145, 393219, 0, 262145, 393220, 0, 262145, 393221, 0, 262145, 393222, 0, 262145, 393223, 0, 262145, 393224, 0, 262145, 393225, 0, 262145, 393226, 0, 262145, 393227, 0, 262145, 393228, 0, 262145, 393229, 0, 262145, 458752, 0, 262149, 458753, 0, 262145, 458754, 0, 262145, 458755, 0, 262145, 458756, 0, 262145, 458757, 0, 262145, 458758, 0, 262145, 458759, 0, 262145, 458760, 0, 262145, 458761, 0, 262145, 458762, 0, 262145, 458763, 0, 262145, 458764, 0, 262145, 458765, 0, 262145, 524288, 0, 262149, 524289, 0, 262145, 524290, 0, 262145, 524291, 0, 262145, 524292, 0, 262145, 524293, 0, 262145, 524294, 0, 262145, 524296, 0, 262145, 524297, 0, 262145, 524298, 0, 262145, 524299, 0, 262145, 524300, 0, 262145, 524301, 0, 262145 )

[node name="HouseSpawnPoint" type="Position2D" parent="."]
position = Vector2( 240, 230 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Dresser" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( 66, 130, 66, 161, 95, 161, 95, 130 )

[node name="Dress2" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 321, 54 )
polygon = PoolVector2Array( 66, 130, 66, 161, 95, 161, 95, 130 )

[node name="Table" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 318, -67 )
polygon = PoolVector2Array( 66, 130, 66, 161, 95, 161, 95, 130 )

[node name="ShelfBookCase" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 30, -66 )
polygon = PoolVector2Array( 66, 130, 66, 161, 162, 162, 160, 130, 95, 130 )

[node name="Bed" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 225, -25 )
polygon = PoolVector2Array( 66, 130, 65, 214, 93, 212, 95, 130 )

[node name="WallLeft" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -66, 126 )
polygon = PoolVector2Array( 64, -125, 66, 161, 95, 161, 95, -125 )

[node name="WallRight" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 386, 126 )
polygon = PoolVector2Array( 64, -125, 66, 161, 95, 161, 95, -125 )

[node name="WallBottom" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -67, 393 )
polygon = PoolVector2Array( 65, -104, 64, -97, 559, -94, 561, -104 )

[node name="WallBottom2" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -65, 325.617 )
scale = Vector2( 1, 3.10417 )
polygon = PoolVector2Array( 65, -104, 63, -93.9436, 546, -94, 547, -106 )

[node name="Moko(npc)" type="StaticBody2D" parent="."]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="Moko(npc)"]
position = Vector2( 215, 138 )
texture = ExtResource( 4 )
hframes = 12
vframes = 8
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Moko(npc)"]
position = Vector2( 214, 141 )
shape = SubResource( 4 )

[node name="PlayerDetector" type="Area2D" parent="Moko(npc)"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Moko(npc)/PlayerDetector"]
position = Vector2( 214, 165 )
shape = SubResource( 5 )

[node name="Dialog" type="Sprite" parent="Moko(npc)"]
visible = false
position = Vector2( 216, 120 )
scale = Vector2( 0.28125, 0.265625 )
texture = ExtResource( 6 )
hframes = 4
frame = 3

[connection signal="body_entered" from="DoorExit" to="." method="_on_DoorExit_body_entered"]
[connection signal="body_entered" from="Moko(npc)/PlayerDetector" to="Moko(npc)" method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="Moko(npc)/PlayerDetector" to="Moko(npc)" method="_on_PlayerDetector_body_exited"]
